Fixed spacing on the About page

--- a/css/main.css
+++ b/css/main.css
@@ -274,7 +274,7 @@ strong {
 }
 
 .about-image {
-  margin-top: -15%;
+  margin-top: 5%;
 }
 
 .here {
